# rgb

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
pkgconfig/: alsa.pc
rgb_cli/: CLI_CONTRACT.md  Cargo.toml
rgb_cli/src/: app.rs  audio.rs  config.rs  emulator.rs  error.rs  lib.rs  main.rs  rom.rs  runner.rs  trace.rs
rgb_cli/tests/: smoke_headless.rs
rgb_core/: Cargo.toml
rgb_core/src/: apu.rs  cartridge.rs  cpu.rs  gameboy.rs  input.rs  lib.rs  memory.rs  mmu.rs  ppu.rs  registers.rs  serial.rs  timer.rs  trace.rs
rgb_core/src/apu/: channel1.rs  channel2.rs  channel3.rs  channel4.rs  mod.rs  units.rs
rgb_core/src/cartridge/: mbc1.rs  mbc3.rs  mbc5.rs  mod.rs  rom_only.rs
rgb_core/src/cpu/: opcode.rs
rgb_core/tests/: cgb_sound.rs  cpu_instructions.rs  dmg_sound.rs  halt_bug.rs  instr_timing.rs  interrupt_time.rs  mem_timing.rs  mem_timing_2.rs  mooneye_acceptance.rs  oam_bug.rs
rgb_core/tests/common/: mod.rs
rgb_frontend/: Cargo.toml
rgb_frontend/src/: app.rs  audio.rs  input.rs  lib.rs  palette.rs  renderer.rs  scaling.rs  timing.rs
rgb_web/: Cargo.toml  build.sh  index.html
rgb_web/src/: audio.rs  lib.rs
