[workspace]
members = ["rgb_core", "rgb_frontend", "rgb_cli", "rgb_web"]
resolver = "3"
default-members = ["rgb_cli"]

[workspace.package]
version     = "0.0.1"
edition     = "2024"
repository  = "https://github.com/joseph-wardle/rgb"
authors     = ["Joseph Wardle <joseph.m.wardle@gmail.com>"]
readme      = "README.md"