[package]
name                 = "rgb_frontend"
edition.workspace    = true
version.workspace    = true
repository.workspace = true
readme.workspace     = true

[dependencies]
rgb_core = { path = "../rgb_core" }
winit    = { version = "0.30", features = ["rwh_06"] }
pixels   = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
