[package]
name                 = "rgb_frontend"
edition.workspace    = true
version.workspace    = true
repository.workspace = true
readme.workspace     = true

[dependencies]
rgb_core = { path = "../rgb_core" }
winit    = { version = "0.30", features = ["rwh_06"] }

# pixels is GPU-accelerated and only used on native targets.
# On WASM we render directly via the Canvas 2D API instead.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pixels = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys       = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version  = "0.3"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "Window",
]
