[package]
name                 = "rgb_web"
edition.workspace    = true
version.workspace    = true
repository.workspace = true
readme.workspace     = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rgb_core     = { path = "../rgb_core" }
rgb_frontend = { path = "../rgb_frontend" }
winit        = { version = "0.30", features = ["rwh_06"] }

wasm-bindgen              = "0.2"
js-sys                    = "0.3"
console_error_panic_hook  = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "AudioContext",
    "AudioContextOptions",
    "AudioDestinationNode",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "BaseAudioContext",
    "ScriptProcessorNode",
    "AudioProcessingEvent",
    "HtmlCanvasElement",
    "Document",
    "Window",
    "console",
]
