[package]
name                 = "rgb_web"
edition.workspace    = true
version.workspace    = true
repository.workspace = true
readme.workspace     = true

[lib]
crate-type = ["cdylib"]

[dependencies]
rgb_core = { path = "../rgb_core" }

wasm-bindgen             = "0.2"
js-sys                   = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version  = "0.3"
features = [
    # Canvas rendering
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
    # Event handling
    "Document",
    "EventTarget",
    "KeyboardEvent",
    "Window",
    # Audio
    "AudioContext",
    "AudioContextOptions",
    "AudioDestinationNode",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "BaseAudioContext",
    "ScriptProcessorNode",
    "AudioProcessingEvent",
    "console",
]
